webview/styles/original-style.css
html {
    --ligatures: normal;
    --font-features: initial;
    --tab-size: 4;
    --container-background-color: #abb8c3;
    --box-shadow: rgba(0, 0, 0, 0.55) 0px 20px 68px;
    --container-padding: 3em;
    --window-border-radius: 4px;
    box-sizing: border-box;
    --enable-resizing: horizontal;
    --zoom: 100%;
}

body {
    padding-top: 48px;
    display: flex;
    flex-flow: column;
    align-items: center;
    font-variant-ligatures: var(--ligatures);
    font-feature-settings: var(--font-features);
    tab-size: var(--tab-size);
    user-select: none;
}

#snippet-scroll {
    max-width: 100%;
    overflow-x: scroll;
    margin: auto;
    zoom: var(--zoom);
}

#snippet-container {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: var(--container-padding);
    background-color: var(--container-background-color);
    background: var(--container-background-color);
    width: max-content;
}

#window {
    display: flex;
    flex-direction: column;
    border-radius: var(--window-border-radius);
    box-shadow: var(--box-shadow);
    overflow: hidden;
    resize: var(--enable-resizing);
    width: max-content;
    min-width: 100px;
    padding: 18px;
    background-color: var(--vscode-editor-background);
}

#snippet {
    max-width: 100%;
    white-space: pre-wrap;
    word-break: break-all;
    color: var(--vscode-editor-foreground);
    background-color: var(--vscode-editor-background);
    font-family: var(--vscode-editor-font-family);
    font-size: calc(var(--vscode-editor-font-size) * 1px);
    font-weight: var(--vscode-editor-font-weight);
}

.line {
    display: flex;
}

.line-number {
    text-align: right;
    color: var(--vscode-editorLineNumber-foreground);
    margin-right: 18px;
    width: var(--line-number-width);
    white-space: nowrap;
    flex: none;
    display: var(--line-number-visibility);
}

.line-code {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

#save-container {
    margin-top: 1rem;
    margin-bottom: 1rem;
    text-align: center;
}

.shutter {
    enable-background: new 0 0 28.3 28.3;
    width: 64px;
    height: 64px;
    cursor: pointer;
}

.size-test {
    font-family: var(--vscode-editor-font-family) !important;
    font-size: calc(var(--vscode-editor-font-size) * 1px) !important;
    display: inline-block;
}

#flash-fx {
    display: none;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: white;
    transition: opacity 200ms ease;
    opacity: 1;
}

